Hacer match con las tablas de sexo y tipoDocumento para poder mostrar el Sexo y Tipo de documento enlazado segun id

--- a/Views/Trabajador/Index.cshtml
+++ b/Views/Trabajador/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Gestion de Trabajadores";
+    ViewData["Title"] = "Gestión de Trabajadores";
 }
 <link href="~/css/Trabajador.css" rel="stylesheet" />
 <link href="//cdn.datatables.net/2.3.4/css/dataTables.dataTables.min.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
         </button>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive fs-6">
         <table id="tablaTrabajadores" class="table table-striped align-middle w-100">
             <thead class="text-center text-secondary">
                 <tr>
