--- a/Views/Trabajador/Index.cshtml
+++ b/Views/Trabajador/Index.cshtml
@@ -6,11 +6,11 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 <div class="container bg-white p-4 rounded shadow-sm">
-    <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
+    <div class="d-flex justify-content-between align-items-center mb-2 flex-wrap">
         <h5 class="fw-bold mb-2 mb-md-0">
             <i class="bi bi-people-fill text-primary me-2"></i>Gestión de Trabajadores
         </h5>
-        <button id="btnModalTrabajador" class="btn btn-primary">
+        <button id="btnAddModalTrabajador" class="btn btn-primary">
             <i class="bi-person-add me-1 fs-5"></i>Nuevo Trabajador
         </button>
     </div>
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-
+@* Modal Agregar nuevo trabajador *@
 <div class="modal fade" id="addTrabajadorModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content border-0 shadow">
@@ -46,15 +46,15 @@
             </div>
 
             <div class="modal-body">
-                <form id="formTrabajador" class="row g-3">
+                <form id="formAddTrabajador" class="row g-3">
 
                     <div class="col-md-3 d-flex justify-content-center align-items-center">
                         <div class="position-relative d-inline-block">
-                            <img id="previewFoto" src="/images/default-user.png" class="rounded-circle border" width="120" height="120">
-                            <label for="foto" class="btn btn-primary btn-sm rounded-circle position-absolute bottom-0 end-0">
+                            <img id="add-previewFoto" src="/images/default-user.png" class="rounded-circle border" width="120" height="120">
+                            <label for="add-foto" class="btn btn-primary btn-sm rounded-circle position-absolute bottom-0 end-0">
                                 <i class="bi bi-camera"></i>
                             </label>
-                            <input type="file" id="foto" name="foto" class="d-none" accept="image/*">
+                            <input type="file" id="add-foto" name="Foto" class="d-none" accept="image/*">
                         </div>
                     </div>
 
@@ -63,44 +63,39 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <label class="form-label">Nombres</label>
-                                <input type="text" class="form-control" name="Nombres" placeholder="Ingrese los nombres">
+                                <input type="text" class="form-control" name="Nombres" id="add-nombres" placeholder="Ingrese los nombres">
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Apellidos</label>
-                                <input type="text" class="form-control" name="Apellidos" placeholder="Ingrese los apellidos">
+                                <input type="text" class="form-control" name="Apellidos" id="add-apellidos" placeholder="Ingrese los apellidos">
                             </div>
 
                             <div class="col-md-6">
                                 <label class="form-label">Tipo de Documento</label>
-                                <select class="form-select" name="TipoDocumento">
-                                    <option value="">Seleccione...</option>
-                                    <option value="1">DNI</option>
-                                    <option value="2">Cédula de Ciudadanía</option>
-                                    <option value="3">Carnet de Extranjería</option>
+                                <select class="form-select" name="TipoDocumentoId" id="add-tipoDocumento">
+                                    <option value="">Cargando...</option>
                                 </select>
                             </div>
+
                             <div class="col-md-6">
                                 <label class="form-label">Nro. Documento</label>
-                                <input type="text" class="form-control" name="NumeroDocumento" placeholder="Ingrese el número">
+                                <input type="text" class="form-control" name="NumeroDocumento" id="add-numeroDocumento" placeholder="Ingrese el número">
                             </div>
 
                             <div class="col-md-6">
                                 <label class="form-label">Sexo</label>
-                                <select class="form-select" name="Sexo">
-                                    <option value="">Seleccione...</option>
-                                    <option value="1">Masculino</option>
-                                    <option value="2">Femenino</option>
-                                    <option value="3">Otro</option>
+                                <select class="form-select" name="SexoId" id="add-sexo">
+                                    <option value="">Cargando...</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Fecha de Nacimiento</label>
-                                <input type="date" class="form-control" name="FechaNacimiento">
+                                <input type="date" class="form-control" name="FechaNacimiento" id="add-fechaNacimiento">
                             </div>
 
                             <div class="col-12">
                                 <label class="form-label">Dirección</label>
-                                <textarea class="form-control" name="Direccion" placeholder="Ingrese la dirección completa"></textarea>
+                                <textarea class="form-control" name="Direccion" id="add-direccion" placeholder="Ingrese la dirección completa"></textarea>
                             </div>
                         </div>
                     </div>
@@ -109,7 +104,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" id="btnGuardar" class="btn btn-primary">Guardar</button>
+                <button type="button" id="btnAddTrabajador" class="btn btn-primary">Agregar</button>
             </div>
         </div>
     </div>
@@ -117,5 +112,6 @@
 
 @section scripts{
     <script src="//cdn.datatables.net/2.3.4/js/dataTables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/Script_Trabajador.js"></script>
 }
