--- a/wwwroot/css/Trabajador.css
+++ b/wwwroot/css/Trabajador.css
@@ -3,6 +3,12 @@
     border-radius: 1.5rem !important;
 }
 
+#dt-search-0 {
+    font-size: 16px;
+    width: 175px;
+    border-radius: 5px;
+}
+
 /* Ajuste general para móviles */
 @media (max-width: 992px) {
     .modal-dialog {
