Añadir colores dinámicos según sexo en tabla de trabajadores.

--- a/Views/Trabajador/Index.cshtml
+++ b/Views/Trabajador/Index.cshtml
@@ -16,7 +16,7 @@
     </div>
 
     <div class="table-responsive fs-6">
-        <table id="tablaTrabajadores" class="table table-striped align-middle w-100">
+        <table id="tablaTrabajadores" class="table align-middle w-100">
             <thead class="text-center text-secondary">
                 <tr>
                     <th>NOMBRES</th>
