--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted bg-white">
         <div class="container">
-            &copy; 2025 - PruebaTec - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Máximo Mercado Racchumí
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
