--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -252,12 +252,12 @@
                 <div class="row g-3">
                     <div class="col-md-6">
                         <div class="alert alert-primary mb-0">
-                            <a href="https://www.figma.com/design/UKxqAXOKsBKdi2fg8gJfOK/Prototipo---Prueba-T%C3%A9cnica-Virtual?node-id=0-1&t=Un2BfmhSxPV106jl-1"><i class="bi bi-link-45deg fs-4"></i> Enlace al prototipo</a>
+                            <i class="bi bi-link-45deg fs-4"></i> Prototipo
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="alert alert-dark mb-0">
-                            <a href="https://github.com/RaiderMr3003/PruebaTec"><i class="bi bi-github fs-4"></i> Repositorio público en GitHub</a>
+                            <i class="bi bi-github fs-4"></i> Repositorio público en GitHub
                         </div>
                     </div>
                     <div class="col-md-6">
